Подключил кафку, паралельно Vaadin делаю