@@ -8,6 +8,8 @@ import org.example.httpcore.httpCore.SecuredHttpCore;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -17,19 +19,42 @@ import java.util.concurrent.CompletableFuture;
 public class FriendRequestClient {
     private final SecuredHttpCore httpCore;
 
-    public List<FriendRequestDto> getOutgoing(String status, int page, int size) {
-        String url = "http://localhost:8085/api/v1/social/friends/requests/outgoing?status=PENDING";
+    public void addFriend(Long addresseeId) {
+        String url = "http://localhost:8085/api/v1/social/friends/requests?addresseeId=" + addresseeId;
         RequestData rd = new RequestData(url, null);
 
         try {
+            log.info("[INFO] Отправка заявки в друзья пользователю id={}", addresseeId);
+            httpCore.post(rd, Void.class);
+            log.info("[INFO] Заявка успешно отправлена пользователю id={}", addresseeId);
+        } catch (Exception e) {
+            log.error("[ERROR] Не удалось отправить заявку пользователю id={}: {}", addresseeId, e.getMessage(), e);
+            throw new RuntimeException("Не удалось отправить заявку в друзья", e);
+        }
+    }
+
+    public List<FriendRequestDto> getOutgoing(int page, int size) {
+        List<FriendRequestDto> result = new ArrayList<>();
+        result.addAll(getByStatus("PENDING", page / 2, size));
+        result.addAll(getOutgoingRejected(page / 2, size));
+        log.info("[INFO] Активных исходящих (PENDING+REJECTED): {}", result.size());
+        return result;
+    }
+
+    public List<FriendRequestDto> getByStatus(String status, int page, int size) {
+        StringBuilder urlBuilder = new StringBuilder("http://localhost:8085/api/v1/social/friends/requests/outgoing?page=");
+        urlBuilder.append(page).append("&size=").append(size).append("&status=").append(status);
+
+        String url = urlBuilder.toString();
+        RequestData rd = new RequestData(url, null);
+
+        try {
+            log.info("[INFO] GET outgoing {}: {}", status, url);
             ResponseEntity<FriendRequestDto[]> resp = httpCore.get(rd, FriendRequestDto[].class);
             FriendRequestDto[] body = resp.getBody();
-
-            List<FriendRequestDto> requests = body != null ? List.of(body) : List.of();
-            log.info("[INFO] Получено исходящих заявок: {}", requests.size());
-            return requests;
+            return body != null ? Arrays.asList(body) : List.of();
         } catch (Exception e) {
-            log.error("[ERROR] Ошибка получения исходящих заявок: {}", e.getMessage());
+            log.error("[ERROR] Ошибка getByStatus({}): {}", status, e.getMessage(), e);
             return List.of();
         }
     }
@@ -45,7 +70,7 @@ public class FriendRequestClient {
             FriendRequestDto[] body = resp.getBody();
             List<FriendRequestDto> requests = body != null ? List.of(body) : List.of();
 
-            log.info("[INFO] ✅ Получено входящих заявок: {} (статус: {})",
+            log.info("[INFO] Получено входящих заявок: {} (статус: {})",
                     requests.size(), resp.getStatusCode());
             return requests;
         } catch (Exception e) {
@@ -53,6 +78,10 @@ public class FriendRequestClient {
             e.printStackTrace();
             return List.of();
         }
+    }
+
+    public List<FriendRequestDto> getOutgoingRejected(int page, int size) {
+        return getByStatus("REJECTED", page, size);
     }
 
     public CompletableFuture<Void> acceptRequest(Long requestId) {
@@ -100,23 +129,32 @@ public class FriendRequestClient {
         });
     }
 
-    public CompletableFuture<Void> cancelRequest(Long addresseeId) {
+    public CompletableFuture<Void> cancelRequest(Long requestId, Long addresseeId) {
+        if (requestId == null || addresseeId == null) {
+            return CompletableFuture.failedFuture(new IllegalArgumentException("requestId и addresseeId обязательны"));
+        }
+
+        // DELETE /requests?addresseeId=X
         String url = String.format("http://localhost:8085/api/v1/social/friends/requests?addresseeId=%d", addresseeId);
         RequestData rd = new RequestData(url, null);
 
-        log.info("[INFO] Отмена заявки для пользователя #{}", addresseeId);
+        log.info("[INFO] Отмена заявки requestId={} addresseeId={} (DELETE ?addresseeId)", requestId, addresseeId);
 
         return CompletableFuture.supplyAsync(() -> {
             try {
-                log.info("[INFO] Отправка DELETE /cancel для пользователя {}", addresseeId);
+                log.info("[INFO] Отправка DELETE /requests?addresseeId={} для заявки {}", addresseeId, requestId);
                 httpCore.delete(rd);
-                log.info("[INFO] Заявка для пользователя {} успешно отменена", addresseeId);
+                log.info("[INFO] Заявка requestId={} отменена", requestId);
                 return null;
             } catch (Exception e) {
-                log.error("[ERROR] Ошибка отмены заявки для пользователя {}: {}", addresseeId, e.getMessage());
-                throw new RuntimeException("Ошибка отмены заявки для пользователя #" + addresseeId);
+                log.error("[ERROR] Ошибка отмены заявки {}: {}", requestId, e.getMessage(), e);
+                throw new RuntimeException("Ошибка отмены заявки requestId=" + requestId, e);
             }
         });
     }
+
+
+
+
 }
 
